--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.4.0",
   "description": "Tells a server how to use a bridge to do stuff with elements in the browser",
   "main": "element-tie.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/erikpukinskis/nrtv-element-tie.git"
-  },
   "dependencies": {
     "amdefine": "*",
     "nrtv-component": "*",
@@ -20,5 +16,9 @@
     "chai": "*"
   },
   "license": "ISC",
-  "homepage": "https://github.com/erikpukinskis/nrtv-element-tie"
+  "homepage": "https://github.com/erikpukinskis/nrtv-element-tie",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/erikpukinskis/nrtv-element-tie.git"
+  }
 }
