--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nrtv-element-tie",
+  "name": "nrtv-bridge-element",
   "version": "0.4.0",
   "description": "Tells a server how to use a bridge to do stuff with elements in the browser",
-  "main": "element-tie.js",
+  "main": "bridge-element.js",
   "dependencies": {
     "amdefine": "*",
     "nrtv-component": "*",
@@ -16,9 +16,9 @@
     "chai": "*"
   },
   "license": "ISC",
-  "homepage": "https://github.com/erikpukinskis/nrtv-element-tie",
+  "homepage": "https://github.com/erikpukinskis/nrtv-bridge-element",
   "repository": {
     "type": "git",
-    "url": "https://github.com/erikpukinskis/nrtv-element-tie.git"
+    "url": "https://github.com/erikpukinskis/nrtv-bridge-element.git"
   }
 }
